--- a/css/styles.css
+++ b/css/styles.css
@@ -10044,10 +10044,10 @@ hr.light {
   padding: 0.75rem 0;
 }
 #mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
-  color: #fff;
+  color: #333333;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active {
-  color: #fff !important;
+  color: #545d68 !important;
 }
 @media (min-width: 992px) {
   #mainNav {
